--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
-
 * {
   box-sizing: border-box;
 }
 
 html {
   font-family: sans-serif;
-  background: #e9e7e7;
+  background: #fff;
 }
 
 body {
-  margin: 0;
+  margin: 6rem;
 }
